--- a/index.html
+++ b/index.html
@@ -1,22 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <meta property="og:title" content="Bitter All">
+  <meta property="og:description" content="What you made about? Bitterall">
+  <meta property="og:image" content="./images/preview.jpg">
+  <meta property="og:url" content="./images/preview.jpg">
+
+  <title>CS - Twitter</title>
 </head>
-<body>
-    <button onclick="addTweet()">Add Tweet</button>
+
+<body class="text-center" data-gr-c-s-loaded="true">
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="masthead mb-auto">
+      <div class="inner">
+        <h3 class="masthead-brand">CS - Twitter</h3>
+        <nav class="nav nav-masthead justify-content-center">
+          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="#">Contact</a>
+        </nav>
+      </div>
+    </header>
+
+    <main role="main" class="inner cover">
+      <h3 class="cover-heading">
+        <div placeholder="Whats on your mind? place" contenteditable="true" id="tweetBody">
+        </div>
+      </h3>
+      <p class="lead">Say anything you want.</p>
+      <p class="lead">
+        <button class="btn btn-light" onclick="addTweet()">Add Tweet</button>
+      </p>
+    </main>
     <ul id="tweetList">
 
     </ul>
 
-    <div contenteditable id="tweetBody">
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+        <p>Made with ❤️ by <a href="https://github.com/PrimeTimeTran  ">PrimeTimeTran</a></p>
+      </div>
+    </footer>
+  </div>
 
-    </div>
-    
-    <script src="js/script.js"></script>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
+  <script src="js/script.js"></script>
 </body>
+
 </html>
