--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main role="main" class="inner cover">
       <h3 class="cover-heading">
-        <div placeholder="Whats on your mind? place" contenteditable="true" id="tweetBody">
+        <div placeholder="Whats on your mind buddy?" contenteditable="true" id="tweetBody">
         </div>
       </h3>
       <p class="lead">Say anything you want.</p>
