--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
         <button class="btn btn-light btn-block" onclick="addTweet()">Add Tweet</button>
       </p>
     </main>
-    <!-- <button onclick="addScript()">Hi</button> -->
+    <a href="/?bg=explosions">Explosions</a>
+    <a href="/?bg=lines">Lines</a>
+    <a href="/?bg=shadows">Shadows</a>
+
     <ul id="tweetList">
     </ul>
 
@@ -67,7 +70,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/1.0.0/anime.min.js"></script>
   <script src="js/script.js"></script>
-  <script id="la" src="js/explosions.js"></script>
+  <!-- <script id="la" src="js/explosions.js"></script> -->
   <!-- <script id="la" src="js/lines.js"></script> -->
   <!-- <script id="la" src="js/shadows.js"></script> -->
   <!-- <script src="js/skyline.js"></script> -->
