Add colors.css. Refactor js struct

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+  <link rel="stylesheet" href="css/colors.css">
   <link rel="stylesheet" href="css/style.css">
 
   <meta property="og:title" content="Bitter All">
@@ -26,9 +27,9 @@
       <div class="inner">
         <h3 class="masthead-brand">Bitter All</h3>
         <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="/?bg=explosions">Explosions</a>
+          <a class="nav-link" href="/?bg=lines">Lines</a>
+          <a class="nav-link" href="/?bg=shadows">Shadows</a>
         </nav>
       </div>
     </header>
@@ -43,9 +44,6 @@
         <button class="btn btn-light btn-block" onclick="addTweet()">Add Tweet</button>
       </p>
     </main>
-    <a href="/?bg=explosions">Explosions</a>
-    <a href="/?bg=lines">Lines</a>
-    <a href="/?bg=shadows">Shadows</a>
 
     <ul id="tweetList">
     </ul>
@@ -70,10 +68,6 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/1.0.0/anime.min.js"></script>
   <script src="js/script.js"></script>
-  <!-- <script id="la" src="js/explosions.js"></script> -->
-  <!-- <script id="la" src="js/lines.js"></script> -->
-  <!-- <script id="la" src="js/shadows.js"></script> -->
-  <!-- <script src="js/skyline.js"></script> -->
 </body>
 
 </html>
