--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:image" content="./img/preview.png">
   <meta property="og:url" content="./img/preview.png">
 
-  <title>CS - Animations Sample</title>
+  <title>CoderSchoool Animations by PrimeTimeTran</title>
 </head>
 
 <body class="text-center" data-gr-c-s-loaded="true">
