Add magical button colors

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </h3>
 
         <p class="">
-          <button class="btn btn-light btn-block" onclick="addTweet()">Add Tweet</button>
+          <button class="btn btn-light btn-block magical-button" onclick="addTweet()">Add Tweet</button>
         </p>
     </main>
 
